--- a/public_html/scss/style.scss
+++ b/public_html/scss/style.scss
@@ -68,10 +68,10 @@
    
     span{
         font-size: 1em;
-        color: $indigo-300;
+        color: #2e4b70;
     }
 
     .card{
-        border-bottom: 3px solid $indigo-300;
+        border-bottom: 3px solid #2e4b70;
     }
   }
